--- a/frontend/main.html
+++ b/frontend/main.html
@@ -21,31 +21,28 @@
 </div>
 <div class="row">
     <div class="col-md-4">
-        <div href="#" class="test button">University of Georgia</div>
+        <div href="/Users/sammathew/WebstormProjects/ScheduleBuilder/frontend/schedulepage.html" class="test button" id="uga">University of Georgia</div>
     </div>
     <div class="col-md-4">
-        <div href="#" class="test button" id="tech">Georgia Institute of Technology</div>
+        <div href="/Users/sammathew/WebstormProjects/ScheduleBuilder/frontend/schedulepage.html" class="test button" id="gatech">Georgia Institute of Technology</div>
     </div>
     <div class="col-md-4">
-        <div href="#" class="test button">Northeastern University</div>
+        <div href="/Users/sammathew/WebstormProjects/ScheduleBuilder/frontend/schedulepage.html" class="test button" id="neu">Northeastern University</div>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <div href="#" class="test button">University of Maryland</div>
+        <div href="/Users/sammathew/WebstormProjects/ScheduleBuilder/frontend/schedulepage.html" class="test button" id="umd">University of Maryland</div>
     </div>
     <div class="col-md-4">
-        <div href="#" class="test button">Emory University</div>
+        <div href="/Users/sammathew/WebstormProjects/ScheduleBuilder/frontend/schedulepage.html" class="test button" id="emory">Emory University</div>
     </div>
 </div>
 
 
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/main2.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
